[gd_scene load_steps=2 format=3 uid="uid://team_selection_scene"]

[ext_resource type="Script" path="res://ui/team_selection.gd" id="1_team_sel"]

[node name="TeamSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_team_sel")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "SELECT YOUR TEAM"
horizontal_alignment = 1

[node name="TeamInfo" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Logo" type="TextureRect" parent="Content/TeamInfo"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
stretch_mode = 5

[node name="TeamName" type="Label" parent="Content/TeamInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Team Name"
horizontal_alignment = 1

[node name="TeamStrength" type="Label" parent="Content/TeamInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 24
text = "Strength: ???"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Content/TeamInfo"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="LabelRoster" type="Label" parent="Content/TeamInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ROSTER"
horizontal_alignment = 1

[node name="RosterGrid" type="HBoxContainer" parent="Content/TeamInfo"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Content"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="BtnPrev" type="Button" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 60.0
grow_vertical = 2
text = "< PREV"

[node name="BtnNext" type="Button" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
grow_vertical = 2
text = "NEXT >"

[node name="BtnSelect" type="Button" parent="Content"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "SELECT TEAM"
